src/test/ui/const-generics/issues/issue-66205.full.stderr
error: constant expression depends on a generic parameter
  --> $DIR/issue-66205.rs:7:12
   |
LL |     fact::<{ N - 1 }>();
   |            ^^^^^^^^^
   |
   = note: this may fail depending on what value the parameter takes

error: aborting due to previous error

